add_library(murmurhash
  AvalancheTest.cpp
  Bitslice.cpp
  Bitvec.cpp
  CityTest.cpp
  City.cpp
  crc.cpp
  DifferentialTest.cpp
  Hashes.cpp
  KeysetTest.cpp
  lookup3.cpp
  md5.cpp
  MurmurHash1.cpp
  MurmurHash2.cpp
  MurmurHash3.cpp
  Platform.cpp
  Random.cpp
  sha1.cpp
  SpeedTest.cpp
  Spooky.cpp
  SpookyTest.cpp
  Stats.cpp
  SuperFastHash.cpp
  Types.cpp
  PMurHash.c
)

if(UNIX)
  install(
    TARGETS
      murmurhash
    DESTINATION
      "/usr/local/${TARGETDIR_VER}/lib/."
  )
else()
  install(
    TARGETS
      murmurhash
    DESTINATION
      "."
  )
endif()
